--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,12 @@
   "name": "sayahomes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ecis.in/sayahomes-react",
+  "homepage": "https://sayahomes.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.3.3",
     "hashrouter": "^1.1.1",
     "jquery": "^3.7.1",
